--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -49,6 +49,9 @@ build_script:
   - ps: $env:BUILD_TIMESTAMP = Get-Date -format "yyyy/MM/dd HH:mm:ss"
   - ps: ctest --extra-verbose --script ".ctest.cmake,configuration_type=$env:configuration,generator=$env:generator,compiler=$env:compiler,build_group=$env:build_group,minimal_packaging=1";
 
+on_finish:
+  - curl -s https://raw.githubusercontent.com/report-ci/scripts/master/upload.py | python - --name "Windows $env:compiler $env:configuration"
+  
 artifacts:
   - path: build/output/clang-cl/Release/stage/pkg/DOGEN-1.0.14-Windows-AMD64.msi
     name: x86_64 MSI
