--- a/.travis.yml
+++ b/.travis.yml
@@ -86,7 +86,7 @@ script:
     fi
 
 after_script:
-  - curl -s https://report.ci/upload.py) | python - --name "${report_name}"
+  - curl -s https://report.ci/upload.py | python - --name "${report_name}"
     
 after_success:
   - if [[ "x${coverage}" == "x1" ]]; then
