--- a/.travis.yml
+++ b/.travis.yml
@@ -80,14 +80,14 @@ script:
   - if [[ $TRAVIS_OS_NAME == 'osx' ]]; then
         export PATH="/usr/local/opt/ccache/libexec:$PATH";
     fi
-  - ctest --extra-verbose --script ".ctest.cmake,configuration_type=${configuration},generator=${generator},compiler=${compiler},number_of_jobs=${JOBS},build_group=${build_group},minimal_packaging=1";
+  - ctest --extra-verbose --script ".ctest.cmake,configuration_type=${configuration},generator=${generator},compiler=${compiler},number_of_jobs=${JOBS},build_group=${build_group},minimal_packaging=1,boost_test_reporting=1";
   - if [[ $TRAVIS_OS_NAME == 'linux' ]]; then
         ${SCRIPTS_DIR}/test_package.linux.sh ${configuration} ${compiler};
     fi
 
 after_script:
   - curl -s https://report.ci/upload.py | python - --name "${report_name}"
-    
+
 after_success:
   - if [[ "x${coverage}" == "x1" ]]; then
        ${SCRIPTS_DIR}/coverage.linux.sh ${STAGE_DIR} /tmp/kcov ${TRAVIS_JOB_ID};
