--- a/projects/masd.dogen.models/CMakeLists.txt
+++ b/projects/masd.dogen.models/CMakeLists.txt
@@ -92,7 +92,7 @@ if (DOGEN_CLI_EXECUTABLE)
     #
     set(prefix "masd.dogen")
     set(models ${prefix})
-    set(models ${models} ${prefix}.variability)
+    set(models ${models} ${prefix}.archetypes)
     set(models ${models} ${prefix}.cli)
     set(models ${models} ${prefix}.dia)
     set(models ${models} ${prefix}.extraction)
@@ -107,6 +107,7 @@ if (DOGEN_CLI_EXECUTABLE)
     set(models ${models} ${prefix}.templating)
     set(models ${models} ${prefix}.orchestration)
     set(models ${models} ${prefix}.utility)
+    set(models ${models} ${prefix}.variability)
 endif()
 
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/dia)
