--- a/projects/masd.dogen.variability/tests/CMakeLists.txt
+++ b/projects/masd.dogen.variability/tests/CMakeLists.txt
@@ -44,18 +44,18 @@ add_custom_target(run_${tests_target_name}
     COMMENT "Running ${tests_target_name}" VERBATIM
     COMMAND ${command}
     WORKING_DIRECTORY ${stage_bin_dir}
-    DEPENDS ${tests_name})
+    DEPENDS ${tests_target_name})
 
 add_dependencies(run_all_tests run_${tests_target_name})
 
 if(WITH_BENCHMARKS)
-    add_custom_target(benchmark_${tests_name}
-        COMMENT "Benchmarking testing ${tests_name}" VERBATIM
+    add_custom_target(benchmark_${tests_target_name}
+        COMMENT "Benchmarking testing ${tests_target_name}" VERBATIM
         COMMAND ${benchmark_command} ${benchmark_repeats}
-        ${benchmark_directory}/${benchmark_prefix}${tests_name}.csv ${command}
+        ${benchmark_directory}/${benchmark_prefix}${tests_target_name}.csv ${command}
         WORKING_DIRECTORY ${stage_bin_dir}
-        DEPENDS ${tests_name})
-    add_dependencies(benchmark_all benchmark_${tests_name})
+        DEPENDS ${tests_target_name})
+    add_dependencies(benchmark_all benchmark_${tests_target_name})
 endif()
 
 add_boost_tests(${tests_binary_name} ${files})
