cmake: use variable to determine the building of static or shared libs

--- a/projects/masd.dogen.variability/src/CMakeLists.txt
+++ b/projects/masd.dogen.variability/src/CMakeLists.txt
@@ -27,7 +27,7 @@ file(GLOB_RECURSE files RELATIVE
     "${CMAKE_CURRENT_SOURCE_DIR}/*.cpp")
 
 set(lib_files ${files})
-add_library(${lib_target_name} STATIC ${lib_files})
+add_library(${lib_target_name} ${lib_files})
 set_target_properties(${lib_target_name}
     PROPERTIES OUTPUT_NAME ${lib_binary_name})
 set_target_properties(${lib_target_name}
@@ -38,4 +38,7 @@ target_link_libraries(${lib_target_name}
     masd.dogen.utility.lib
     ${Boost_LIBRARIES})
 
-install(TARGETS ${lib_target_name} ARCHIVE DESTINATION lib COMPONENT libraries)
+install(TARGETS ${lib_target_name}
+    ARCHIVE DESTINATION lib
+    LIBRARY DESTINATION lib
+    COMPONENT libraries)
