--- a/projects/masd.dogen.generation.csharp/src/CMakeLists.txt
+++ b/projects/masd.dogen.generation.csharp/src/CMakeLists.txt
@@ -27,7 +27,7 @@ file(GLOB_RECURSE files RELATIVE
     "${CMAKE_CURRENT_SOURCE_DIR}/*.cpp")
 
 set(lib_files ${files})
-add_library(${lib_target_name} STATIC ${lib_files})
+add_library(${lib_target_name} ${lib_files})
 set_target_properties(${lib_target_name} PROPERTIES
     OUTPUT_NAME ${lib_binary_name})
 set_target_properties(${lib_target_name}
@@ -49,4 +49,7 @@ if (DOGEN_CLI_EXECUTABLE)
     add_dependencies(weave_all weave_${lib_target_name})
 endif()
 
-install(TARGETS ${lib_target_name} ARCHIVE DESTINATION lib COMPONENT libraries)
+install(TARGETS ${lib_target_name}
+    ARCHIVE DESTINATION lib
+    LIBRARY DESTINATION lib
+    COMPONENT libraries)
