--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -53,7 +53,7 @@ on_finish:
   - ps: Invoke-WebRequest https://report.ci/upload.py | Select-Object -ExpandProperty Content | python - --name "Windows $env:compiler $env:configuration"
 
 artifacts:
-  - path: build/output/clang-cl/Release/stage/pkg/DOGEN-1.0.16-Windows-AMD64.msi
+  - path: build\output\clang-cl\Release\stage\pkg\DOGEN-1.0.16-Windows-AMD64.msi
     name: x86_64 MSI
 
 notifications:
@@ -77,7 +77,7 @@ deploy:
     subject: masd-project
     repo: main
     package: dogen
-    artifact: build/output/clang-cl/Release/stage/pkg/DOGEN-1.0.16-Windows-AMD64.msi
+    artifact: build\output\clang-cl\Release\stage\pkg\DOGEN-1.0.16-Windows-AMD64.msi
     version: 1.0.16
     publish: true
     override: true
