rename data directory to shared
- as a result of this change, we have flattened data directory on
  install so that we just have shared/library rather than
  shared/data/library.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -510,7 +510,7 @@ endif()
 # include all sub directories
 #
 add_subdirectory(${CMAKE_SOURCE_DIR}/build)
-add_subdirectory(${CMAKE_SOURCE_DIR}/data)
+add_subdirectory(${CMAKE_SOURCE_DIR}/share)
 add_subdirectory(${CMAKE_SOURCE_DIR}/doc)
 add_subdirectory(${CMAKE_SOURCE_DIR}/test_data)
 add_subdirectory(${CMAKE_SOURCE_DIR}/projects)
