cmake: add relational model to list of models

--- a/projects/dogen.models/CMakeLists.txt
+++ b/projects/dogen.models/CMakeLists.txt
@@ -94,6 +94,7 @@ if (DOGEN_CLI_EXECUTABLE)
     set(models ${models} ${prefix}.engine)
     set(models ${models} ${prefix}.utility)
     set(models ${models} ${prefix}.variability)
+    set(models ${models} ${prefix}.relational)
 endif()
 
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/dia)
