--- a/.travis.yml
+++ b/.travis.yml
@@ -34,6 +34,15 @@ matrix:
     - os: linux
       compiler: gcc
       env: configuration=Debug compiler="gcc9" generator="Ninja" build_group="Continuous"  report_name="Linux Gcc Debug"
+    # OSX builds are failing due to the wrong version of ODB
+    - os: osx
+      compiler: clang
+      osx_image: xcode10
+      env: deploy="1" configuration=Release compiler="clang" generator="Unix Makefiles" build_group="Continuous" report_name="OSX Clang Release"
+    - os: osx
+      compiler: clang
+      osx_image: xcode10
+      env: configuration=Debug compiler="clang" generator="Unix Makefiles" build_group="Continuous" report_name="OSX Clang Debug"
 
   include:
     #
