--- a/projects/CMakeLists.txt
+++ b/projects/CMakeLists.txt
@@ -268,8 +268,14 @@ include_directories(
     ${CMAKE_SOURCE_DIR}/projects/dogen.generation/include
     ${CMAKE_SOURCE_DIR}/projects/dogen.generation.cpp/include
     ${CMAKE_SOURCE_DIR}/projects/dogen.generation.csharp/include
-    ${CMAKE_SOURCE_DIR}/projects/dogen.relational/include
     )
+
+if (WITH_RELATIONAL_SUPPORT)
+    include_directories(
+        ${CMAKE_SOURCE_DIR}/projects/dogen.relational/include
+        )
+endif()
+
 
 get_directory_property(dirs INCLUDE_DIRECTORIES)
 set(global_includes "")
@@ -298,4 +304,7 @@ add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/dogen.templating)
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/dogen.generation)
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/dogen.generation.cpp)
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/dogen.generation.csharp)
-add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/dogen.relational)
+
+if (WITH_RELATIONAL_SUPPORT)
+    add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/dogen.relational)
+endif()
