cmake: generate makefiles for generated tests
- update profile to generate cmake
- regenerate cmakefiles

--- a/projects/dogen/generated_tests/CMakeLists.txt
+++ b/projects/dogen/generated_tests/CMakeLists.txt
@@ -17,7 +17,7 @@
 # Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston,
 # MA 02110-1301, USA.
 #
-set(name "dogen_relational")
+set(name "dogen")
 set(lib_target_name ${name}) # .lib
 set(tests_binary_name ${name}.generated_tests)
 set(tests_target_name ${name}.generated_tests)
