--- a/projects/dogen.cli/src/CMakeLists.txt
+++ b/projects/dogen.cli/src/CMakeLists.txt
@@ -36,6 +36,8 @@ set_target_properties(${lib_target_name}
     PROPERTIES VERSION ${DOGEN_VERSION} SOVERSION ${DOGEN_VERSION_MAJOR})
 
 target_link_libraries(${lib_target_name}
+    dogen.lib
+    dogen.utility.lib
     ${Boost_LIBRARIES})
 
 install(TARGETS ${lib_target_name}
