--- a/projects/dogen.tracing/CMakeLists.txt
+++ b/projects/dogen.tracing/CMakeLists.txt
@@ -19,6 +19,7 @@
 #
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src)
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/tests)
+add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/generated_tests)
 
 install(
     DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/include/
